feat: add player name registration with broadcast response

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,3 +1,7 @@
 spring.application.name=mankomania-server
 server.address=0.0.0.0
 server.port=8080
+
+logging.level.root=INFO
+logging.level.at.mankomania.server.websocket=DEBUG
+logging.pattern.console=%d{yyyy-MM-dd HH:mm:ss} [%thread] %-5level %logger{36} - %msg%n
