Exclude WebSocket communication from Sonar coverage tracking

--- a/pom.xml
+++ b/pom.xml
@@ -25,6 +25,12 @@
 		<!-- SonarCloud Integration -->
 		<sonar.organization>mankomania-1</sonar.organization>
 		<sonar.host.url>https://sonarcloud.io</sonar.host.url>
+
+		<sonar.coverage.exclusions>
+			**/WebSocketManager.kt,
+			**/WebSocketBrokerController.kt
+		</sonar.coverage.exclusions>
+
 	</properties>
 
 	<dependencies>
